[package]
name = "wasm-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fp-bindgen = { version = "1", features = [
    "serde-bytes-compat",
    "generators",
] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
