[package]
name = "temporal-workflow-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[features]
wasm = ["temporal-wasm-workflow-binding"]

[dependencies]
anyhow = "1.0"
crossbeam = "0.8"
derive_more = "0.99"
futures = "0.3"
parking_lot = "0.12"
prost = "0.9"
prost-types = "0.9"
tokio = { version = "1.17", default-features = false, features = ["rt", "sync"]}
tokio-stream = "0.1"
serde_bytes = "0.11"

[dependencies.temporal-sdk-core-protos]
path = "../sdk-core-protos"
version = "0.1"

[dependencies.temporal-wasm-workflow-binding]
path = "../bindings/rust-plugin"
version = "0.1"
optional = true